--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="stylePhone.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,7 +23,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-3 border-black border-start">
+        <div class="col-3 border-start border-black">
           <nav class="nav_H">
             <ul>
               <li>
@@ -43,41 +44,51 @@
             </ul>
           </nav>
         </div>
-        <div class="col border border-black border-end-0">
-          <h1 class="Title">Portfólió</h1>
-          <h2>Önéletrajz</h2>
-          <h4 style="margin-bottom: 50px">Kollár Gergő</h4>
-          Sziasztok! Kollár Gergő vagyok, harmadéves Média design szakos
-          hallgató a Kaposvári Rippl-Rónai Művészeti Intézetben. Tanulmányaimat
-          a Tolna Megyei SZC Apáczai Csere János Technikum és Kollégiumban
-          végeztem Dombóváron, informatikai szakon. Emellett OKJ képesítéssel is
-          rendelkezem hálózatrendszer-üzemeltetőként. 2021-ben kezdtem el
-          ismerkedni a Blenderrel, mivel akkoriban elkezdett érdekelni a 3D
-          modellezés és animáció. Azóta is szívesen készítek animációs
-          projekteket, főleg a sci-fi és érzelmileg erőteljes témák terén. Bár
-          jelenleg a média design képzésben veszek részt, hosszú távon inkább az
-          informatikai pályán szeretnék elhelyezkedni – célom, hogy
-          rendszergazdaként dolgozhassak. Szabadidőmben hobbiként foglalkozom
-          weboldalak készítésével és programozásával, ami jól kiegészíti a
-          technikai érdeklődésemet.
-          <br />
-          Programismeret:
-
-          <ul>
-            <li>
-              3D és animáció: Blender (profi szint), Substance 3D Painter,
-              Unity, TouchDesigner
-            </li>
-            <li>Grafika és videó: Adobe Photoshop, Adobe Premiere Pro</li>
-            <li>Fejlesztés és programozás: HTML, CSS, JavaScript, C#</li>
-          </ul>
+        <div class="col border-start border-bottom border-black px-3">
+          <h1 class="Title">Kollár Gergő</h1>
+          <h2 class="mt-2 mb-5">Portfólió</h2>
+          <h2 class="text-center mb-4">Önéletrajz</h2>
+          <p>
+            Sziasztok! Kollár Gergő vagyok, harmadéves Média design szakos
+            hallgató a Kaposvári Rippl-Rónai Művészeti Intézetben.
+            Tanulmányaimat a Tolna Megyei SZC Apáczai Csere János Technikum és
+            Kollégiumban végeztem Dombóváron, informatikai szakon. Emellett OKJ
+            képesítéssel is rendelkezem hálózatrendszer-üzemeltetőként. 2021-ben
+            kezdtem el ismerkedni a Blenderrel, mivel akkoriban elkezdett
+            érdekelni a 3D modellezés és animáció. Azóta is szívesen készítek
+            animációs projekteket, főleg a sci-fi és érzelmileg erőteljes témák
+            terén. Bár jelenleg a média design képzésben veszek részt, hosszú
+            távon inkább az informatikai pályán szeretnék elhelyezkedni – célom,
+            hogy rendszergazdaként dolgozhassak. Szabadidőmben hobbiként
+            foglalkozom weboldalak készítésével és programozásával, ami jól
+            kiegészíti a technikai érdeklődésemet.
+          </p>
+          <div class="row mx-2 my-5 text-center">
+            <h5 class="border-bottom border-black pb-3">Programismeretek</h5>
+            <div class="col border-end border-black">
+              3D és animáció: <br />
+              Blender (profi szint), Substance 3D Painter, Unity, TouchDesigner
+            </div>
+            <div class="col">
+              Grafika és videó: <br />
+              Adobe Photoshop, Adobe Premiere Pro
+            </div>
+            <div class="col border-start border-black">
+              Fejlesztés és programozás: <br />
+              HTML, CSS, JavaScript, C#
+            </div>
+          </div>
+          <div class="footer border-top border-black py-3 mt-5 text-center">
+            © 2025 Kollár Gergő. Minden jog fenntartva.
+            <br />
+            <a href="/kapcsolat">Kapcsolat</a> |
+            <a href="/adatvedelem">Adatvédelem</a>
+          </div>
         </div>
       </div>
     </div>
     <div class="face">
-      <img
-        src="https://www.dropbox.com/scl/fi/pv1fodwq84b7i5huewtnr/Face_White_low.gif?rlkey=9ln7lmqw5q06hrq9ps8ox4863&st=2xoj5iv0&raw=1"
-        alt="Face White Low" />
+      <img src="img/Face_White_low.gif" alt="Face White Low" />
     </div>
     <script src="Script.js"></script>
   </body>
