--- a/Videos.html
+++ b/Videos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="stylePhone.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,6 +15,20 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
     <title>Kollár Gergő - Portfólió - Videók</title>
+    <style>
+      * {
+        color: white !important;
+      }
+      body {
+        background-color: black;
+      }
+      .site-wide {
+        border: 2px solid white;
+      }
+      .site-wide .pointer {
+        background-color: white;
+      }
+    </style>
   </head>
   <body>
     <div class="custom-cursor site-wide">
@@ -51,13 +66,21 @@
     <div class="container-fluid">
       <div class="row">
         <div
-          class="col border border-black border-bottom-0"
+          class="col-12 col-md border-top border-right border-white mb-4 mb-md-0"
           id="videoList"></div>
-        <div class="col border border-black border-start-0">
+        <div class="col-12 col-md border-bottom border-white mt-4 mt-md-0">
           <div id="iframe" class="img-fluid"></div>
         </div>
       </div>
     </div>
+
+    <div class="footer border-top border-white py-3 mt-5 text-center">
+      © 2025 Kollár Gergő. Minden jog fenntartva.
+      <br />
+      <a href="/kapcsolat">Kapcsolat</a> |
+      <a href="/adatvedelem">Adatvédelem</a>
+    </div>
+
     <script src="Script.js"></script>
     <script src="videoList.js"></script>
   </body>
