--- a/Works.html
+++ b/Works.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="stylePhone.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,7 +23,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <h1 class="Title text-center mb-4">Munkáim</h1>
+          <h1 class="Title text-center m-5">Munkáim</h1>
         </div>
       </div>
       <div class="row">
@@ -57,7 +58,26 @@
         </div>
       </div>
       <!--Works class for borders-->
-      <div class="row border-top border-dark pt-5 works" id="WorksOutput"></div>
+      <div class="row pt-5 works">
+        <div class="row" id="WorksOutput"></div>
+        <div class="row">
+          <h3 class="w-100 mb-4 border-top border-dark pt-5" id="2025">2025</h3>
+          <div class="col-12 col-md-4 mb-4">
+            <a href="Zokron.html" class="thumbnail-link"
+              ><img
+                src="img/Thumbnails/ZOKRON.png"
+                alt="ZOKRON Reklám"
+                class="img-fluid NO-FULLSCREEN"
+            /></a>
+          </div>
+        </div>
+      </div>
+      <div class="footer border-top border-black py-3 mt-5 text-center">
+        © 2025 Kollár Gergő. Minden jog fenntartva.
+        <br />
+        <a href="/kapcsolat">Kapcsolat</a> |
+        <a href="/adatvedelem">Adatvédelem</a>
+      </div>
     </div>
     <div id="OpenImage">
       <button
@@ -68,5 +88,6 @@
     </div>
     <script src="Script.js"></script>
     <script src="imageLoader.js"></script>
+    <script src="OpenImage.js"></script>
   </body>
 </html>
