--- a/Zokron.html
+++ b/Zokron.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="stylePhone.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,8 +14,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
-    <title>Kollár Gergő - ZOKRON reklám</title>
-    <style></style>
+    <title>Kollár Gergő - Portfólió - Munkáim - ZOKRON</title>
   </head>
   <body>
     <div class="custom-cursor site-wide">
@@ -22,69 +22,89 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-3 border-black border-start">
-          <nav class="nav_H">
+        <div class="col">
+          <h1 class="Title text-center mt-5 mb-1">ZOKRON</h1>
+          <h5 class="text-center mb-4"><i>"Amíg a földet éri!"</i></h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <nav class="nav_V">
             <ul>
               <li>
-                <span class="movingBoxH" data-speed="0.3"
+                <span class="movingBoxV" data-speed="0.3"
                   ><a href="index.html"><button>Rólam</button></a></span
                 >
               </li>
               <li>
-                <span class="movingBoxH" data-speed="0.5"
+                <span class="movingBoxV" data-speed="0.5"
                   ><a href="Works.html"><button>Munkáim</button></a></span
                 >
               </li>
               <li>
-                <span class="movingBoxH" data-speed="0.32"
+                <span class="movingBoxV" data-speed="0.32"
                   ><a href="Videos.html"><button>Videók</button></a></span
                 >
               </li>
             </ul>
           </nav>
         </div>
-        <div class="col border border-black border-end-0 Scroll">
-          <h1 class="Title">ZOKRON</h1>
-          <h4 style="margin-bottom: 25px">
-            a hadszíntérről a sportpályákra, ahol a fájdalom enyhül, és a
-            teljesítmény szárnyal.
-          </h4>
-          <h5 style="margin-bottom: 50px">
-            Reklám
-            <br />
-            Akció, Vígjáték
-          </h5>
-          <p>
-            Egy harctéren harcoló katona zoknija kilyukad, lába sajog, mozdulni
-            sem tud. Társa egy titokzatos, fénylő dobozból előhúzza a ZOKRON-t –
-            egy ultramodern, LED-csíkos csodazoknit. Miután felhúzza, a katona
-            új erőre kap, és szupergyorsan tér vissza a csatába. A jelenet
-            hirtelen Budapestre vált, ahol a katona – immár civilként,
-            sportfelszerelésben – egy nő mellett fut a Parlament előtt. A ZOKRON
-            nemcsak a harcban, de a hétköznapokban is új szintre emeli a mozgás
-            élményét. ZOKRON – Amíg a földet éri!
-          </p>
-          <h4 class="py-5">Moodboard</h4>
+      </div>
+      <!--Works class for borders-->
+      <div class="row pt-5 border-top border-black">
+        <h5 style="margin-bottom: 50px">
+          <i>Reklám</i>
+          <br />
+          <i>Akció, Vígjáték</i>
+        </h5>
+        <p>
+          Egy harctéren harcoló katona zoknija kilyukad, lába sajog, mozdulni
+          sem tud. Társa egy titokzatos, fénylő dobozból előhúzza a ZOKRON-t –
+          egy ultramodern, LED-csíkos csodazoknit. Miután felhúzza, a katona új
+          erőre kap, és szupergyorsan tér vissza a csatába. A jelenet hirtelen
+          Budapestre vált, ahol a katona – immár civilként, sportfelszerelésben
+          – egy nő mellett fut a Parlament előtt. A ZOKRON nemcsak a harcban, de
+          a hétköznapokban is új szintre emeli a mozgás élményét. ZOKRON – Amíg
+          a földet éri!
+        </p>
+        <h4 class="py-5 text-center">Moodboard</h4>
+
+        <a href="#" class="thumbnail-link">
           <img
             class="img-fluid"
             src="assets/ZOKRON/ZOKRON -Moodboard.png"
-            alt="" />
-          <h4 class="py-5">Forgatókönyv</h4>
-          <br />
-          <p class="text-center"><button>hallgasd meg!</button></p>
-          <br />
-          <div
-            class="embed-responsive embed-responsive-16by9"
-            style="height: 100%">
-            <embed
-              class="img-fluid w-100"
-              style="height: 100%"
-              src="assets/ZOKRON/KollarGergo_ZOKRON_Forgatokonyv_2.pdf"
-              type="application/pdf" />
-          </div>
+            alt=""
+        /></a>
+        <h4 class="py-5 text-center">Forgatókönyv</h4>
+        <br />
+        <h5 class="text-center">hallgasd meg!</h5>
+        <p class="text-center">Média</p>
+        <br />
+        <div
+          class="embed-responsive embed-responsive-16by9"
+          style="height: 640px">
+          <embed
+            class="img-fluid w-100"
+            style="height: 640px"
+            src="assets/ZOKRON/KollarGergo_ZOKRON_Forgatokonyv_2.pdf"
+            type="application/pdf" />
         </div>
       </div>
+      <div class="footer border-top border-black py-3 mt-5 text-center">
+        © 2025 Kollár Gergő. Minden jog fenntartva.
+        <br />
+        <a href="/kapcsolat">Kapcsolat</a> |
+        <a href="/adatvedelem">Adatvédelem</a>
+      </div>
+    </div>
+    <div id="OpenImage">
+      <button
+        onclick="document.getElementById('OpenImage').style.display='none'">
+        X
+      </button>
+      <div id="ReplaceImage"></div>
     </div>
     <script src="Script.js"></script>
+    <script src="OpenImage.js"></script>
   </body>
 </html>
